[project]
name = "internal-staff-directory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "ipykernel>=7.1.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.2.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit-extras>=0.7.8",
    "streamlit[auth,charts,pdf]==1.58.0",
]

[tool.uv]
package = false